# aedi

./: .gitignore  dub.json  meson.build  meson_options.txt
examples/: meson.build
examples/annotation_configuration/: meson.build
examples/configuration_primitives/: meson.build
examples/decorating_containers/: meson.build
examples/dependencies/: meson.build
examples/extending_containers/: meson.build
examples/extending_factory/: meson.build
examples/extending_generic_factory/: meson.build
examples/memory_management/: meson.build
examples/minimal/: meson.build
examples/multiple_containers/: meson.build
examples/named_dependencies/: meson.build
examples/value_container/: meson.build
source/aermicioi/aedi/: meson.build
source/aermicioi/aedi/factory/: package.d
source/aermicioi/aedi/test/: meson.build
source/aermicioi/aedi/util/: meson.build
source/aermicioi/util/: meson.build
