subdir('annotation_configuration/')
subdir('configuration_primitives/')
subdir('decorating_containers/')
subdir('dependencies/')
subdir('extending_containers/')
subdir('extending_factory/')
subdir('extending_generic_factory/')
subdir('memory_management/')
subdir('minimal/')
subdir('multiple_containers/')
subdir('named_dependencies/')
subdir('value_container/')
