decorating_containers_src = files(
        'source/decorating_containers.d'
        )

decorating_containers_bin = executable(
        'decorating_containers-bin',
        [decorating_containers_src],
        [aermicioi_aedi_src],
        [aermicioi_aedi_util_src],
        include_directories : [aedi_src_d]
        )


