extending_containers_src = files(
        'source/extending_containers.d'
        )

extending_containers_bin = executable(
        'extending_containers-bin',
        [extending_containers_src],
        [aermicioi_aedi_src],
        [aermicioi_aedi_util_src],
        include_directories : [aedi_src_d]
        )


