extending_factory_src = files(
        'source/extending_factory.d'
        )

extending_factory_bin = executable(
        'extending_factory-bin',
        [extending_factory_src],
        [aermicioi_aedi_src],
        [aermicioi_aedi_util_src],
        include_directories : [aedi_src_d]
        )


