extending_generic_factory_src = files(
        'source/extending_generic_factory.d'
        )

extending_generic_factory_bin = executable(
        'extending_generic_factory-bin',
        [extending_generic_factory_src],
        [aermicioi_aedi_src],
        [aermicioi_aedi_util_src],
        include_directories : [aedi_src_d]
        )


