multiple_containers_src = files(
        'source/multiple_containers.d'
        )

multiple_containers_bin = executable(
        'multiple_containers-bin',
        [multiple_containers_src],
        [aermicioi_aedi_src],
        [aermicioi_util_src],
        include_directories : [aedi_src_d]
        )


