named_dependencies_src = files(
        'source/named_dependencies.d'
        )

named_dependencies_bin = executable(
        'named_dependencies-bin',
        [named_dependencies_src],
        [aermicioi_aedi_src],
        [aermicioi_util_src],
        include_directories : [aedi_src_d]
        )


