aermicioi_aedi_src_d = include_directories('.')

subdir('util/')

aermicioi_aedi_src = files(
        #configurer/annotation
        'configurer/annotation/annotation.d',
        'configurer/annotation/component_scan.d',
        
        #configurer/register
        'configurer/register/configuration_context_factory.d',
        'configurer/register/container.d',
        'configurer/register/context.d',
        'configurer/register/factory_configurer.d',
        
        #container
        'container/aggregate_container.d',
        'container/aliasing_container.d',
        'container/application_container.d',
        'container/container.d',
        'container/decorating_mixin.d',
        'container/deffered_container.d',
        'container/describing_container.d',
        'container/factory.d',
        'container/gc_registering_container.d',
        'container/prototype_container.d',
        'container/proxy_container.d',
        'container/singleton_container.d',
        'container/subscribable_container.d',
        'container/switchable_container.d',
        'container/tuple_container.d',
        'container/type_based_container.d',
        'container/value_container.d',

        #exception
        'exception/circular_reference_exception.d',
        'exception/di_exception.d',
        'exception/in_progress_exception.d',
        #'exception/in_use_exception.d',
        'exception/instance_factory_exception.d',
        'exception/invalid_cast_exception.d',
        'exception/not_found_exception.d',
        'exception/property_configurer_exception.d',

        #factory
        'factory/decorating_factory.d',
        'factory/factory.d',
        'factory/generic_factory.d',
        'factory/proxy_factory.d',
        'factory/reference.d',
        'factory/wrapping_factory.d',

        #storage
        'storage/aggregate_locator.d',
        'storage/alias_aware.d',
        'storage/allocator_aware.d',
        'storage/decorator.d',
        'storage/locator.d',
        'storage/locator_aware.d',
        'storage/object_storage.d',
        'storage/storage.d',
        'storage/wrapper.d',

        #test
        
    
        )

