aermicioi_aedi_test_src_d = include_directories('.')

aermicioi_aedi_test_src = files(
        #configurer/annotation
        'configurer/annotation/component_scan.d',
        
        #configuerer/register
        'configurer/register/container.d',
        'configurer/register/context.d',
        'configurer/register/factory_configurer.d',

        #container
        'container/aggregate_container.d',
        'container/aliasing_container.d',
        'container/application_container.d',
        'container/deffered_container.d',
        'container/factory.d',
        'container/prototype_container.d',
        'container/proxy_container.d',
        'container/singleton_container.d',
        'container/subscribable_container.d',
        'container/switchable_container.d',
        'container/tuple_container.d',
        'container/type_based_container.d',
        'container/value_container.d',
        
        # exception
        'exception/exception.d',

        # factory
        'factory/decorating_factory.d',
        'factory/factory.d',
        'factory/generic_factory.d',
        'factory/proxy_factory.d',
        'factory/reference.d',
        'factory/wrapping_factory.d',

        # storage
        'storage/aggregate_locator.d',
        'storage/locator.d',
        'storage/object_storage.d',
        'storage/storage.d',

        # .
        'fixture.d',
        'fixture_second.d'
        )
